{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 1039,
  "lineage": "6c2fe59c-9e28-bec3-adf9-3be3f46cb8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ae2c305ce5e9370f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-94-194.compute-1.amazonaws.com",
            "public_ip": "34.230.94.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-079fe3873ac326aa4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-168-129.compute-1.amazonaws.com",
            "public_ip": "34.237.168.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_sever",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-0eae6c5e27aa39035",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eae6c5e27aa39035",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyleo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae0e1ff92185d562",
            "private_dns": "ip-10-0-0-160.ec2.internal",
            "private_ip": "10.0.0.160",
            "public_dns": "ec2-3-95-164-39.compute-1.amazonaws.com",
            "public_ip": "3.95.164.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09109cfdc850c338f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb1d0af6ba11afd1",
            "tags": {
              "Name": "mp_leo-bastion_server"
            },
            "tags_all": {
              "Name": "mp_leo-bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073de0bdccdccf9e4"
            ]
          },
          "dependencies": [
            "aws_db_instance.database",
            "aws_db_subnet_group.dbsg",
            "aws_security_group.acesso-ssh-mp",
            "aws_security_group.rds_sg",
            "aws_subnet.private_db_a",
            "aws_subnet.private_db_c",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-028ba165c39ee4fb5",
            "id": "igw-028ba165c39ee4fb5",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae2c305ce5e9370f",
            "id": "nat-0bcec31acdf56099b",
            "network_interface_id": "eni-090bcbe8e34b04dec",
            "private_ip": "10.0.0.12",
            "public_ip": "34.230.94.194",
            "subnet_id": "subnet-0eb1d0af6ba11afd1",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079fe3873ac326aa4",
            "id": "nat-00fe116dfb54e0252",
            "network_interface_id": "eni-020ff27eedce6fd36",
            "private_ip": "10.0.1.170",
            "public_ip": "34.237.168.129",
            "subnet_id": "subnet-094a18f005c7ce935",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-07c1c2c87ac3776b2",
            "id": "rtb-07c1c2c87ac3776b2",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bcec31acdf56099b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-06f6e25404eeac786",
            "id": "rtb-06f6e25404eeac786",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00fe116dfb54e0252",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-0b4ff7b477bf24e29",
            "id": "rtb-0b4ff7b477bf24e29",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028ba165c39ee4fb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbb67278ea6fafb1",
            "route_table_id": "rtb-07c1c2c87ac3776b2",
            "subnet_id": "subnet-0bb370cb353528ed7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a",
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032712e1874c42f84",
            "route_table_id": "rtb-06f6e25404eeac786",
            "subnet_id": "subnet-03321ecb293d839ad"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_app_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e4a669471a07f4",
            "route_table_id": "rtb-07c1c2c87ac3776b2",
            "subnet_id": "subnet-08c4516340341d4a7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a",
            "aws_subnet.private_db_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a2793a14ca78982",
            "route_table_id": "rtb-06f6e25404eeac786",
            "subnet_id": "subnet-07538f2652d9669fe"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_db_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a73da8583631073",
            "route_table_id": "rtb-0b4ff7b477bf24e29",
            "subnet_id": "subnet-0eb1d0af6ba11afd1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085516c1c9ceeae90",
            "route_table_id": "rtb-0b4ff7b477bf24e29",
            "subnet_id": "subnet-094a18f005c7ce935"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-mp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-073de0bdccdccf9e4",
            "description": "rds_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073de0bdccdccf9e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rds_sg_mp_leo",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-02c2e754431ab1774",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c2e754431ab1774",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5002
              }
            ],
            "name": "apis",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-0d00e805f235bd61b",
            "description": "rds_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d00e805f235bd61b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0bb370cb353528ed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0bb370cb353528ed7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-03321ecb293d839ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03321ecb293d839ad",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-08c4516340341d4a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-08c4516340341d4a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-07538f2652d9669fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-07538f2652d9669fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0eb1d0af6ba11afd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0eb1d0af6ba11afd1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-094a18f005c7ce935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-094a18f005c7ce935",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0109cccd91d356451"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-0109cccd91d356451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0ecfc84000fb6d1e2",
            "default_route_table_id": "rtb-068c992abfee55b71",
            "default_security_group_id": "sg-0a9df4ec6e08490d5",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0109cccd91d356451",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068c992abfee55b71",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          }
        }
      ]
    }
  ]
}